...
                  children: [
                    SizedBox(
                      height: 100,
                      child: Image.asset('assets/logo.jpg'),
                    ),
                    Text(
                      "SkillTrade Hub",
                      style: TextStyle(
                          fontSize: 30,
                          fontWeight: FontWeight.bold,
                          color: Colors.yellow.shade900),
                    ),
                    const Text("Welcome to the hub of skills!",
...
                              context.push('/login');
                            }),
                        const SizedBox(
                          width: 15,
                        ),
                        MyButton(
                            text: "Sign up",
                            onPressed: () {
                              context.push('/signup');
                            }),
                      ],
                    ),
                  ],
...
